# materials-knowledge-assistant

./: .env.example  .gitignore  CONSOLE_TASKS.md  RAILWAY_DEPLOY.md  README.md  VPS_DEPLOY.md  architecture-diagram.html  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.rules/: Backend_Spec_MKA.md  Frontend_Spec_MKA.md  Product-Requirements-Document-(PRD).md  RAG_Architecture_Specification_MKA.md  system_architecture_document_mka_v_1.md
backend/: .env.example  Dockerfile  pyproject.toml  railway.json  reindex_corpus.py
backend/.reindex/: checkpoint.json
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  documents.py  metrics.py  multimodal.py  upload.py
backend/app/api/schemas/: chat.py  documents.py  error.py
backend/app/core/: config.py  metrics_store.py
backend/app/db/: database.py  models.py
backend/app/integrations/: openai_client.py
backend/app/rag/: prompts.py
backend/app/services/: chat.py  documents.py  ingestion.py  reranking.py  retrieval.py
backend/app/storage/: postgres_provider.py  provider.py  supabase_provider.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_chat.py  test_documents.py  test_ingestion.py  test_metrics.py  test_multimodal.py  test_reranking.py  test_storage.py  test_upload.py
frontend/: .env.example  Dockerfile  middleware.ts  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  providers.tsx
(+23 files in other folders)
