[project]
name = "mka-backend"
version = "0.1.0"
description = "Materials Knowledge Assistant backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sse-starlette>=2.1.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "qdrant-client~=1.11.0",
  "openai>=1.30.0",
  "cohere>=5.0.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "PyJWT[crypto]>=2.9.0",
  "pypdf>=5.0.0",
  "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
